--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -112,9 +112,11 @@ fr:
   encryptable/transferring/credential:
     new:
       title: "partager fichier"
+    show: Données d'accès partagées
     receiver:
       name: Choisir le récepteur
     submit: envoyer
+    sent_at: Envoyé le
     description_for_sender: Tes données d'accès sont envoyées crypté au destinataire sélectionné dans le dossier de la boîte de réception.
 
   admin:
