Feature/657/file sharing (#658)

--- a/config/locales/ch_be.yml
+++ b/config/locales/ch_be.yml
@@ -81,6 +81,8 @@ ch_be:
       weak_password: 'Um d Sicherheit z verbessere, söttisch es komplizierteres Passwort wähle'
     teams:
       not_existing: 'Es existiert kes Team mit dr Id %{id}'
+    folders:
+      duplicated_inbox: 'Es cha nume ei inbox ordner im Persönleche Team gä'
 
   confirm:
     delete: '%{entry_class} %{entry_label} lösche?'
