--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -21,6 +21,7 @@ de:
   password: Passwort
   actions: Aktionen
   download: Herunterladen
+  download_file: Datei herunterladen
   "yes": Ja
   "no": Nein
   help: Hilfe
@@ -41,6 +42,7 @@ de:
   new: Neu
   back: Zurück
   save: Speichern
+  share: Teilen
   close: Schliessen
   user: Benutzer
   hi_user: "Hi, "
@@ -80,6 +82,7 @@ de:
       title: Zugangsdaten
       created_at: "Erstellt am"
       last_update: "Letzte Änderung am"
+      transferred_at: "Transferiert am"
       attachments: Anhänge
       file: Datei
       show_password: Passwort anzeigen
@@ -90,6 +93,21 @@ de:
       blank: Leer
     new:
       title: Neue Zugangsdaten
+    share:
+      title: Datei teilen
+
+  encryptable/transferring/file:
+    new:
+      title: "Datei teilen"
+    receiver:
+      name: Wähle einen Empfänger aus
+    show:
+      sender_name: Name vom Sender
+    submit: Senden
+    description_for_sender: Deine Datei wird verschlüsselt in den Inbox Ordner des Empfängers geschickt.
+    description_for_receiver: Beschreibung für den Empfänger
+    download: Geteilte Datei herunterladen
+    delete_transferred_encryptables: Geteilte Datei löschen
 
   admin:
     title: Admin
@@ -288,8 +306,16 @@ de:
       uploaded: Die Datei wurde erfolgreich hochgeladen.
       uploaded_size_to_high: Die Datei ist zu gross zum hochladen. (Max. 10MB)
       uploaded_filename_is_empty: Die Datei muss benannt sein
+      uploaded_file_blank: Die Datei darf nicht leer sein
       uploaded_file_inexistent: Datei ist inexistent
       uploaded_filename_already_exists: Dateiname existiert bereits
+    encryptable_transfer:
+      credentials:
+        transferred: Zugangsdaten erfolgreich dem Empfänger übermittelt
+        transfer_failed: Übermittlung der Zugangsdaten mit dem Empfänger fehlgeschlagen
+      file:
+        transferred: Datei erfolgreich dem Empfänger übermittelt
+        transfer_failed: Übermittlung der Datei mit dem Empfänger fehlgeschlagen
     session:
       auth_failed: Ungültiger Benutzername / Passwort.
       weak_password: Um die Sicherheit zu verbessern, sollten Sie ein komplexeres Passwort wählen
@@ -325,6 +351,7 @@ de:
     delete_folder: Ordner löschen
     delete_encryptables: Zugangsdaten löschen
     configure: Konfiguriere Mitglieder
+    sent_by: Gesendet von
 
   helpers:
     label:
