--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -21,6 +21,7 @@ en:
   password: Password
   actions: Actions
   download: Download
+  download_file: Download file
   "yes": Yes
   "no": No
   help: Help
@@ -41,6 +42,7 @@ en:
   new: New
   back: Back
   save: Save
+  share: Share
   close: Close
   user: User
   hi_user: "Hi,"
@@ -80,6 +82,7 @@ en:
       title: Credentials
       created_at: "Created at"
       last_update: "Last Update at"
+      transferred_at: "Transferred at"
       attachments: Attachments
       file: File
       show_password: Show password
@@ -90,6 +93,20 @@ en:
       blank: none
     new:
       title: New Credentials
+    share:
+      title: Share File
+
+  encryptable/transferring/file:
+    new:
+      title: Send file to
+    receiver:
+      name: Choose a receiver
+    show:
+      sender_name: Sender name
+    submit: Send
+    description_for_sender: Your file will be sent encrypted to the inbox folder from the selected receiver.
+    description_for_receiver: Description for the receiver
+    delete_transferred_encryptables: Delete transferred file
 
   admin:
     title: Admin
@@ -288,8 +305,16 @@ en:
       uploaded: File was successfully uploaded.
       uploaded_size_to_high: The file is too big to upload. (max. 10MB)
       uploaded_filename_is_empty: The file has to be named
+      uploaded_file_blank: File is not allowed to be blank
       uploaded_file_inexistent: File is inexistent
       uploaded_filename_already_exists: Filename already exists
+    encryptable_transfer:
+      credentials:
+        transferred: Successfully transferred credentials to recipient
+        transfer_failed: Failed to transfer credentials to recipient
+      file:
+        transferred: Successfully transferred file to recipient
+        transfer_failed: Failed to transfer file to recipient
     session:
       auth_failed: Authentication failed! Enter a correct username and password.
       weak_password: To improve security you should change your login password to a more complex one.
@@ -325,6 +350,7 @@ en:
     delete_folder: Delete the Folder
     delete_encryptables: Delete the Credentials
     configure: Configure Members
+    sent_by: Sent by
 
   helpers:
     label:
