Implement share credentials

--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -131,6 +131,16 @@ de:
     download: Geteilte Datei herunterladen
     delete_transferred_encryptables: Geteilte Datei löschen
 
+  encryptable/transferring/credential:
+    new:
+      title: Zugangsdaten teilen mit
+    show: Geteilte Zugangsdaten
+    receiver:
+      name: Wähle einen Empfänger aus
+    submit: Senden
+    sent_at: Gesendet am
+    description_for_sender: Deine Zugangsdaten werden verschlüsselt in den Inbox Ordner des Empfängers geschickt.
+
   admin:
     title: Admin
     settings:
