--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -131,6 +131,16 @@ ch_be:
     download: Teilti datei abäladä
     delete_transferred_encryptables: Teilti datei löschä
 
+  encryptable/transferring/credential:
+    new:
+      title: "Zuägangsdate teilä mit"
+    show: Teilti Zuegangsdatä
+    receiver:
+      name: Wäu ä empfänger
+    submit: Schickä
+    sent_at: Gschickt am
+    description_for_sender: Dini Zuegangsdate wärdä verschlüsslet i Inbox Ordner vom Empfänger gschickt.
+
   admin:
     title: Admin
     settings:
