--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -131,6 +131,16 @@ en:
     description_for_receiver: Description for the receiver
     delete_transferred_encryptables: Delete transferred file
 
+  encryptable/transferring/credential:
+    new:
+      title: Send credentials to
+    show: Transferred Credentials
+    receiver:
+      name: Choose a receiver
+    submit: Send
+    sent_at: Sent on
+    description_for_sender: Your credentials will be sent encrypted to the inbox folder from the selected receiver.
+
   admin:
     title: Admin
     settings:
