--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -425,11 +425,11 @@ fr:
     cleartext email:
       too_long: L'email est trop long
       exclusion: L'e-mail ne peut pas être vide
-    value:
+    cleartext custom attr:
       too_long: Attribut individuel La valeur est trop longue
       exclusion: La valeur d'attribut personnalisé ne peut pas être vide
       present: La valeur d'attribut personnalisé doit être présente
-    label:
+    cleartext custom attr label:
       too_long: L'attribut individuel Label est trop long
       exclusion: Le libellé d'attribut personnalisé ne peut pas être vide
       present: L'étiquette d'attribut personnalisé doit être présente
