implement feedback to make translation more clear

--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -223,7 +223,7 @@ ch_be:
     edit:
       title: Team bearbeite
     description:
-      private: Admins hei kei Zuägriff wenn das uswählsch
+      private: Admins hei kei Zuägriff wenn'd das uswählsch
     show:
       members: Mitglider
     configure:
